Fix spacing for navigation and pagination for gallery section

--- a/src/containers/features/features.css
+++ b/src/containers/features/features.css
@@ -25,7 +25,7 @@
   gap: 70px 5vw;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 641px) {
   .nuvola__features-content__grid {
     display: flex;
     flex-direction: column;
